--- a/conversor-app/app.json
+++ b/conversor-app/app.json
@@ -20,10 +20,16 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
+      "package": "com.tkmaia.conversorapp",
       "edgeToEdgeEnabled": true
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "f73ff22f-b9d0-41ee-b8ed-6327ace3e8bd"
+      }
     }
   }
 }
